Phase 1 part one
creates database in background